tests/ui/attributes/positions/used.stderr
error: the `used` attribute cannot be used on functions
  --> $DIR/used.rs:7:3
   |
LL | #[used]
   |   ^^^^
   |
   = help: the `used` attribute can only be applied to statics

error: the `used` attribute cannot be used on structs
  --> $DIR/used.rs:10:3
   |
LL | #[used]
   |   ^^^^
   |
   = help: the `used` attribute can only be applied to statics

error: the `used` attribute cannot be used on traits
  --> $DIR/used.rs:13:3
   |
LL | #[used]
   |   ^^^^
   |
   = help: the `used` attribute can only be applied to statics

error: the `used` attribute cannot be used on trait impl blocks
  --> $DIR/used.rs:16:3
   |
LL | #[used]
   |   ^^^^
   |
   = help: the `used` attribute can only be applied to statics

error: the `used` attribute cannot be used on foreign statics
  --> $DIR/used.rs:21:7
   |
LL |     #[used]
   |       ^^^^
   |
   = help: the `used` attribute can only be applied to statics

error: aborting due to 5 previous errors

